# Jhon-Crow-Multichannel-Panorama-VST-plugin

./: .gitignore  .gitkeep  CMakeLists.txt  README.md
.github/workflows/: build-vst.yml
docs/case-studies/issue-1/: README.md  action-plan.md  architecture.md  research.md
docs/case-studies/issue-5/: README.md  research.md
docs/case-studies/issue-7/: analysis.md  ci-runs.json  issue.json  pr-8-comments.json
docs/case-studies/issue-9/: analysis.md  branch-commits.tsv  ci-runs.json  issue.json  pr-10.diff  pr-10.json
scripts/: validate-preparation.sh
source/: DistanceModel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SceneState.h  SourceChannelMapping.h
tests/: DistanceGainTests.cpp  SourceChannelMappingTests.cpp
